# piscine-datascience

./: .gitginore  README.md  template.py
ds-0-engineer/: docker-compose.yml  init.sh
ds-0-engineer/ex00/: docker-compose.yml
ds-0-engineer/ex01/: docker-compose.yml
ds-0-engineer/ex02/: table.sh  table.sql
ds-0-engineer/ex03/: automatic_table.sh  automatic_table.sql
ds-0-engineer/ex04/: items_table.sh  items_table.sql
ds-1-warehouse/: .env.sample  docker-compose.yml  init.sh  pyproject.toml
ds-1-warehouse/data/: pgpass  servers.json  signature.txt
ds-1-warehouse/ex00/: customers_table.ipynb  customers_table.py  customers_table.sql
ds-1-warehouse/ex01/: customers_table.py  customers_table.sql  remove_duplicates.py  remove_duplicates.sql
ds-1-warehouse/ex02/: fusion.py  remove_duplicates.py  remove_duplicates.sql
ds-1-warehouse/ex03/: fusion.py  fusion.sql
python-0-starting/: pyproject.toml
python-0-starting/ex00/: Hello.py
python-0-starting/ex01/: format_ft_time.py
python-0-starting/ex02/: find_ft_type.py
python-0-starting/ex03/: NULL_not_found.py
python-0-starting/ex04/: whatis.py
python-0-starting/ex05/: building.py
python-0-starting/ex06/: filterstring.py  ft_fliter.py
python-0-starting/ex07/: sos.py
python-0-starting/ex08/: Loading.py  tester.py
python-0-starting/ex09/: setup.py  tester.py
python-0-starting/ex09/ft_package/: __init__.py
python-1-array/: pyproject.toml
python-1-array/ex00/: give_bmi.py  tester.py
python-1-array/ex01/: array2D.py  tester.py
python-1-array/ex02/: load_image.py  tester.py
python-1-array/ex03/: zoom.py
python-1-array/ex04/: rotate.py
python-1-array/ex05/: load_image.py  pimp_image.py  rotate.py  tester.py
python-2-datatable/: pyproject.toml
python-2-datatable/ex00/: tester.py
python-2-datatable/ex01/: aff_life.py
python-2-datatable/ex02/: aff_pop.py  load_csv.py
python-2-datatable/ex03/: projection_life.py
python-3-oop/: pyproject.toml
python-3-oop/ex00/: S1E9.py  tester.py
python-3-oop/ex01/: S1E7.py  tester.py
python-4-dop/: pyproject.toml
(+14 files in other folders)
