[tool.poetry]
name = "python-0-starting"
version = "0.1.0"
description = ""
authors = ["Sungwoo Park <codest99@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
tqdm = "^4.65.0"
wheel = "^0.40.0"
twine = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
